<resources>
    <string name="app_name">Blossom Spirometer</string>

    <declare-styleable name="ProgressActivity">
        <attr name="loadingProgressBarWidth" format="dimension" />
        <attr name="loadingProgressBarHeight" format="dimension" />
        <attr name="loadingProgressBarColor" format="color" />
        <attr name="loadingBackgroundColor" format="color" />

        <attr name="emptyImageWidth" format="dimension" />
        <attr name="emptyImageHeight" format="dimension" />
        <attr name="emptyTitleTextSize" format="dimension" />
        <attr name="emptyContentTextSize" format="dimension" />
        <attr name="emptyTitleTextColor" format="color" />
        <attr name="emptyContentTextColor" format="color" />
        <attr name="emptyBackgroundColor" format="color" />

        <attr name="errorImageWidth" format="dimension" />
        <attr name="errorImageHeight" format="dimension" />
        <attr name="errorTitleTextSize" format="dimension" />
        <attr name="errorContentTextSize" format="dimension" />
        <attr name="errorTitleTextColor" format="color" />
        <attr name="errorContentTextColor" format="color" />
        <attr name="errorButtonTextColor" format="color" />
        <attr name="errorButtonBackgroundColor" format="color" />
        <attr name="errorBackgroundColor" format="color" />
    </declare-styleable>


    <string name="progressActivityEmptyContentPlaceholder">We couldn\'t find anything. Tap the button to take your first image.</string>
    <string name="progressActivityEmptyTitlePlaceholder">Nothing here.</string>
    <string name="progressActivityErrorButton">Try Again</string>
    <string name="toolbar">Yolohealth</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="title_login">Operator Login</string>
    <string name="hint_phone">token number</string>
    <string name="action_get_otp">SUBMIT</string>
    <string name="patient_name">Patient name</string>
    <string name="patientName">Patient Name</string>
    <string name="patient_age">DOB</string>
    <string name="patientAge">Age</string>
    <string name="patientPhone">Phone Number</string>
    <string name="Patient_gender">Gender</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="barcode">Barcode</string>
    <string name="type">Beneficiary Type</string>
    <string name="date">Test Date</string>
    <string name="profileToolbar">Patient Details</string>
    <string name="spiro_fef">FEF</string>
    <string name="spiro_pef">PEF</string>
    <string name="spiro_fev1">FEV1</string>
    <string name="spiro_fev6">FEV6</string>
    <string name="comment">Comment</string>


    <style name="ShapeAppearanceOverlay.Login.MaterialCardView" parent="">
        <item name="cornerFamilyTopLeft">rounded</item>
        <item name="cornerFamilyTopRight">rounded</item>
        <item name="cornerSizeTopLeft">8dp</item>
        <item name="cornerSizeTopRight">8dp</item>
    </style>


    <style name="Heading1">
        <item name="android:textSize">24sp</item>

    </style>

    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:textColorHint">#ffffff</item>
        <item name="android:paddingStart">16dp</item>
        <item name="android:paddingEnd">16dp</item>
        <item name="boxStrokeColor">#ffffff</item>
    </style>

    <string name="spirometer_instruction">1. Take the spirometer device.
\n2. Press power button on the device.
\n3. Click on the start test button on the app.
\n4. Breathe in fully and seal the lips around the mouthpiece and blast all air out as forcefully as possible at least 6 seconds.
\n5. Wait for the reading on the app.
</string>
    <string name="setting_up_device">Setting up device...</string>
    <string name="instruction">Instruction</string>
    <string name="manual">Manual</string>
    <string name="measuring">Keep blowing for at least 6 seconds....</string>
    <string name="start_test">START TEST</string>
    <string name="submit_manual">SUBMIT</string>
    <string name="scan_button_title">SCAN</string>
    <string name="clear_all_button_title">CLEAR</string>


    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
        <!-- Used for the buttons -->
        <item name="colorAccent">@color/white</item>
        <!-- Used for the title and text -->
        <item name="android:textColorPrimary">@color/black</item>
        <!-- Used for the background -->
        <item name="android:background">@color/white</item>
        <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
        <item name="android:windowBackground">@color/transparent</item>
        <item name="buttonBarButtonStyle">@style/DialogButtonStyle</item>
    </style>


    <style name="MyTitleTextStyle">
        <item name="android:textColor">@color/textColorDarkPrimary</item>
        <item name="android:textAppearance">@style/MyToolbarTitleTextStyle</item>
    </style>

    <style name="DialogButtonStyle" parent="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog">
        <item name="android:textColor">@color/colorPrimary</item>
        <item name="android:textAllCaps">false</item>
    </style>

    <style name="MyToolbarTitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">17sp</item>

    </style>


    <string name="main_title_placeholder">BM+SR 0123  00:80:25:11:22:33</string>
    <string name="sub_title_placeholder">BM+SR 0123 [BondableFunctional]</string>
    <string name="remove_button_title">Remove</string>
    <string name="connect_spirometer">CONNECT</string>
    <string name="cancel_test">Cancel</string>
    <string name="your_reading_is">TEST RESULTS:</string>
    <string name="submit_param">SUBMIT</string>
    <string name="retry_test">Retry</string>
    <string name="clear">CLEAR</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="no_internet">No Internet Connection Available</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">Email</string>
    <string name="title_token">Enter Token</string>
    <string name="proceed">Proceed</string>

    <string name="sureLogout">Do you want to logout ?</string>
    <string name="log">LOGOUT</string>
    <string name="cancel">CANCEL</string>
    <string name="action_forgot">Forgot Password?</string>
    <string name="title_forgot">Please enter the verification code we sent to your email address</string>
    <string name="hint_code">Verification Code</string>
    <string name="hint_pass_confirm">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="submit">SUBMIT</string>
    <string name="update_app">Update App</string>
    <string name="action_logout">Logout</string>
    <string name="action_token">Home</string>
    <string name="instruction_manual">Enter all values from Vitalograph Spirometer model 4000 device.</string>
    <string name="available_devices">Available Devices</string>

    <string name="ble_scanInstruction">1.Take the Vitalograph spirometer model 4000 device.
\n2. Press power button on the device.
\n3. Make sure mobile Bluetooth is turned on.
\n4. Click on scan button on the app to discover near by spirometer device(s).

</string>
    <string name="instructions">Instructions</string>
    <string name="pop_title">Vitalograph Spirometer</string>
    <string name="cancel_popup">Cancel</string>
    <string name="pair_device">Pair</string>
    <string name="mac_address_title">Mac Address :</string>
    <string name="serial_no_title">Serial No :</string>
    <string name="labour">Labour Id</string>
    <string name="patient_details_tag">Patient Details</string>
    <string name="ratio">FEV1/FEV6</string>
    <string name="no_device_found">No device found</string>
    <string name="connect">CONNECT</string>

    <style name="CustomCardCorners" parent="@style/Widget.MaterialComponents.CardView">
        <item name="shapeAppearanceOverlay">@style/ShapeAppearance_custom_corners</item>
    </style>

    <style name="ShapeAppearance_custom_corners" parent="">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSizeTopLeft">40dp</item>
        <item name="cornerSizeTopRight">40dp</item>
    </style>



</resources>