<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deviceSetting"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/updateApp"
        android:title="@string/update_app"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/token_home"
        android:title="@string/action_token"
        app:showAsAction="never"/>-->

    <item
        android:id="@+id/token_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/white"
        app:showAsAction="always|withText"
        android:title="Home" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>