<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E0E0E0">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        android:text="@string/main_title_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_cnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:padding="4dp"
        android:textStyle="normal"
        android:fontFamily="@font/roboto"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sub_title_placeholder"
        />

    <ImageView
        android:id="@+id/pared_img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_check"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        app:tint="@color/md_green_400"
        android:visibility="gone"/>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="#E00000"
        android:textColor="#FFFFFFFF"
        android:text="@string/remove_button_title"
        android:visibility="gone"
        />

    <!--
    android:visibility="invisible"
    -->

</RelativeLayout>