<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="@string/progressActivityEmptyTitlePlaceholder" />

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="56dp"
            android:gravity="center"
            android:lineSpacingExtra="5.5dp"
            tools:text="@string/progressActivityEmptyContentPlaceholder" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/progressActivityErrorButton"
            android:textAllCaps="false"
            android:textColor="#808082"
            android:textSize="14sp"
            app:strokeColor="#808082" />

    </LinearLayout>

</RelativeLayout>