<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activities.login.LoginActivity">


    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/forgot_password"
                android:src="@drawable/ic_password" />


            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="#ffffff"
                    app:shapeAppearance="@style/ShapeAppearanceOverlay.Login.MaterialCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="9dp"
                        android:paddingEnd="16dp">

                        <TextView
                            android:id="@+id/tv_welcome"
                            style="@style/Heading1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:fontFamily="@font/roboto"
                            android:gravity="center"
                            android:text="@string/title_forgot"
                            android:textColor="@color/md_orange_500"
                            android:textSize="21sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_code"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/hint_code">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionNext"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_pass"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:hint="@string/hint_pass"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_confirm_pass"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="40dp"
                            android:hint="@string/hint_pass_confirm"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_confirm_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_submit"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_gravity="end"
                            android:backgroundTint="#199ed9"
                            android:fontFamily="@font/roboto"
                            android:paddingStart="16dp"
                            android:paddingEnd="10dp"
                            android:text="@string/action_get_otp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>