<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    tools:context=".ui.activities.login.LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:gravity="center"
            android:padding="12dp">


            <LinearLayout
                android:id="@+id/loginImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/login_bg"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_login_bg" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginImage"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:boxBackgroundColor="@color/white">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="username"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="8dp"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:boxBackgroundColor="@color/white"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:autofillHints="username"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#8BC34A"
                    android:text="LOGIN" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l1"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="#e2e2e2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/or"
                    android:textColor="#9a9a9a"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="#e2e2e2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l2"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gmailLogin"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="8dp"
                    android:text="Forgot Password?"
                    android:textColor="#199ed9"
                    android:textStyle="bold" />

                <!-- <ProgressBar
                     android:visibility="gone"
                     android:id="@+id/progressbar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"/>-->


            </LinearLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <!--<RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="#eeeeee" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />


    </RelativeLayout>-->

</RelativeLayout>